# cargo-smart-release

./: Cargo.toml
.github/workflows/: audit.yml
