[package]
name = "cargo-smart-release"
version = "0.21.6"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
repository = "https://github.com/Byron/cargo-smart-release"
description = "Cargo subcommand for fearlessly releasing crates in workspaces."
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo"]
include = ["src/**/*", "README.md", "CHANGELOG.md"]

[[bin]]
name = "cargo-smart-release"
path = "src/cli/main-smart-release.rs"
test = false

[[bin]]
name = "cargo-changelog"
path = "src/cli/main-changelog.rs"
test = false

[features]
cache-efficiency-debug = ["gix/cache-efficiency-debug"]

[dependencies]
gix = { version = "0.71.0", default-features = false, features = ["max-performance", "interrupt"] }
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive", "cargo"] }
env_logger = { version = "0.11.8", default-features = false, features = ["humantime", "auto-color"] }
cargo_metadata = "0.19.2"
log = "0.4.27"
toml_edit = "0.22.24"
semver = "1.0.26"
crates-index = { version = "3.6.0", default-features = false, features = ["git-performance", "git-https"] }
cargo_toml = "0.22.1"
winnow = "0.7.6"
git-conventional = "0.12.9"
jiff = "0.2.6"
pulldown-cmark = "0.13.0"
bitflags = "2"

[dev-dependencies]
insta = "1.42.2"
gix-testtools = "0.15.0"
testing_logger = "0.1.1"

[workspace]
